# segger

./: CMakeLists.txt  README.md
SEGGER/Syscalls/: SEGGER_RTT_Syscalls_GCC.c
Syscalls/: SEGGER_RTT_Syscalls_GCC.c
custom/: debug_output.h
