add_library(SEGGER_RTT 
    #${CMAKE_CURRENT_SOURCE_DIR}/HardFault/SEGGER_HardFault_Handler.c

    # RTT
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_RTT.c
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_RTT.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Config/SEGGER_RTT_Conf.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_RTT_printf.c

    # syscall
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/Syscalls/SEGGER_RTT_Syscalls_GCC.c
    #${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/Syscalls/SEGGER_RTT_Syscalls_IAR.c
    #${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/Syscalls/SEGGER_RTT_Syscalls_KEIL.c
    #${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/Syscalls/SEGGER_RTT_Syscalls_SES.c

    # system view
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_SYSVIEW.c
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_SYSVIEW.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_SYSVIEW_ConfDefaults.h
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_SYSVIEW_Int.h
    ${CMAKE_CURRENT_SOURCE_DIR}/Config/SEGGER_SYSVIEW_Conf.h

    # armv7 (for cormtex m3, m4)
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER/SEGGER_RTT_ASM_ARMv7M.S
    )

target_include_directories(SEGGER_RTT PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}/SEGGER
    ${CMAKE_CURRENT_SOURCE_DIR}/Config
    #${CMAKE_CURRENT_SOURCE_DIR}/RTT
    ${CMAKE_CURRENT_SOURCE_DIR}
    )
